# control_case_back_base

./: .gitignore  CHAT_SYSTEM_README.md  README.md  TESTING_DOCUMENTATION.md  chat_integration_example.py  main.py  pyproject.toml  pytest.ini  test_commands.md
config/: auth_config.py  celery.py  constants.py  kafka_config.py  redis.py  settings.py
database/: core.py  decorator.py  main_connection.py  types.py
database/logic/: permissions.py
database/models/: agreement.py  balance.py  court.py  documents.py  documents_app.py  news_feed.py  notifications.py  schedule.py  support.py  users.py
endpoints/auth/: auth.py
endpoints/chats/: admin_chat.py  chat.py  chat_kafka.py  connection_manager.py  redis_bridge.py
endpoints/documents/: document.py
endpoints/news/: news.py
endpoints/payments_schedule/: schedule.py  schedule_admin.py
endpoints/stages/: stage.py
exceptions/database_exc/: agreement.py  auth.py  balance_exceptions.py  documents_exceptions.py  group_exceptions.py  news.py  schedule.py  stage.py
migration/: env.py
migration/versions/: 5a5e12cb6220_initial.py  dc3fdbf2bbc8_add_posts.py  f7be4aad30ad_edit_posts.py
schemas/: admin_schemas.py  agreement_schema.py  balance_schema.py  chat.py  court_schema.py  documents_schema.py  news_schema.py  schedule_schema.py  user_schema.py
tests/: __init__.py  conftest.py
tests/test_auth/: __init__.py  test_chat_auth_integration.py
utils/: assignment_manager.py  auth.py  chat.py  chat_system_init.py  kafka_consumer.py  kafka_producer.py  permissions.py  queue_manager.py  tasks.py  websocket_manager.py
(+24 files in other folders)
