[project]
name = "control_case_back_base"
version = "0.1.0"
description = ""
authors = [
    {name = "SWOMH",email = "tifame67@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "docxtpl (>=0.20.1,<0.21.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "docx2pdf (>=0.1.8,<0.2.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiokafka (>=0.11.0,<0.12.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}

